[project]
name = "prepayment"
version = "0.1.0"
description = ""
authors = [
    {name = "cpuoverload"}
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
